<resources>
    <string name="app_name">Failsafe Alert</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_mail_settings_title">Email Settings</string>
    <string name="pref_mail_settings_summary">Email Server Settings</string>
    <string name="pref_mail_username_title">Email Account Username</string>
    <string name="pref_mail_password_title">Email Account Password</string>
    <string name="pref_mail_host_title">Mail Host</string>
    <string name="pref_mail_port_title">Mail Port</string>
    <string name="pref_mail_auth_title">Mail Authentication</string>
    <string name="pref_mail_sslport_title">SSL Port</string>
    <string name="pref_mail_fallback_title">Fallback</string>
    <string name="pref_mail_quitwait_title">Quit/Wait</string>

    <string name="pref_notification_time_text">Enable Cancellation at</string>
    <string name="pref_alert_time_text">Send Alert at</string>

    <string name="pref_message_title">Compose Help Request</string>

    <string name="cancel_button_enabled">Cancel Alarm</string>
    <string name="cancel_button_disabled">Cancel Alarm\nDisabled, please wait until </string>
    <string name="cancel_button_disabled_message">Wait for the notification!</string>
    <string name="custom_email_server_settings_summary">Custom email server settings</string>
    <string name="custom_server_settings_title">Custom server settings</string>
    <string name="message_settings_category_title">Message Settings</string>
    <string name="test_message">This message is a test from the Failsafe Alert app.</string>
    <string name="message_test_button_text">Send TEST Message</string>
    <!--string name="message_help_button_text">Send HELP Request NOW!</string -->
    <string name="mail_host_hint">Mail Host</string>
    <string name="mail_port_hint">Mail Port</string>
    <string name="ssl_port_hint">SSL Port</string>
    <string name="notification_text">Failsafe Alert is active! Cancel it now, or the alert will be sent.</string>
    <string name="alert_canceled">Alert canceled</string>
    <string name="cancel_notification_title">Cancel the alert!</string>
    <string name="cancel_notification_text">Use the "Cancel Alarm" button in Failsafe Alert to prevent the help request from being sent.</string>
    <string name="action_help">Help</string>
    <string name="contacts_help_text">
        \tTo select or edit contacts, use the contact button in the lower right corner of the main screen.\n\n
        To remove a contact, swipe left or right on the contact name.\n\n
        To remove a phone number or email address, swipe left or right on that item.\n\n
        Contacts are saved automatically.\n\n
        Your message will be sent to all phone numbers and email addresses shown!
    </string>
    <string name="email_settings_help_text">
        \tSet your email account username (probably your email address) in the \"Email Account Username\" screen.\n\n
        Set your email account password in the \"Email Account Password\" screen.\n
        Gmail users with 2-factor authentication enabled must generate an app-specific password in their Google account settings.\n\n
        Select your email server in the \"Email Server Settings\" screen.\n
        \t\tPick your server from the \"Pick Email Server\" screen. If you need a custom server, pick \"Custom\", then enter those settings in the \"Custom server settings\" screen.
    </string>
    <string name="settings_help_text">
        \tEdit the message you want to have sent in the \"Compose Help Request\" screen.\n\n
        Set the time each day you want the cancel button to activate by picking a time in the \"Enable Cancellation at\" screen.\n\n
        Set the time each day you want the message to be sent if the cancel button HAS NOT been pressed in the \"Send Alert at\" screen.
    </string>
    <string name="help_text">
        \tThis app sends a message to all selected contacts if the main screen cancel button is NOT pressed during a set time period each day.\n\n
        Select a help topic below for more information.
    </string>
    <string name="contacts_help_button_text">Contacts Help</string>
    <string name="settings_help_button_text">Settings Help</string>
    <string name="email_settings_help_button_text">Email Settings Help</string>
    <string name="test_sent_toast">Test message sent to selected contacts</string>
    <string name="test_send_failed_toast">Error, could not send test message!</string>
    <!--string name="help_request_sent_toast">Help request sent to selected contacts!</string-->
    <!--string name="help_request_failed_toast">Error, could not send help request!</string-->
    <string name="email_server_list_title">Pick Email Server — do this first</string>
    <!--string name="send_message_fail_title">Sending message failed.</string-->
    <!--string name="send_message_fail_text">Sending the help request failed. Check your email username, password, server settings, and internet connection.</string-->
    <string name="email_send_error_notification_title">Error sending email</string>
    <string name="email_send_error_notification_text">Check your email server settings, username, password, and internet connection.\nDisable Airplane Mode if it is on.</string>
    <string name="alert_sent_notification_title">Alert sent</string>
    <string name="alert_sent_notification_text">Failsafe alert has sent a non-test alert to your selected contacts.</string>
    <string name="empty_contacts_list">Your contacts list is empty!</string>
    <string name="email_send_success_title">Alert successfully sent</string>
    <string name="email_send_success_text">Failsafe alert has sent an alert.</string>
    <string name="pref_log_to_sd_title">Save testing logs</string>

</resources>
