<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_mail_host_title" />

    <EditText
        android:id="@+id/mail_host_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_host_hint"
        android:inputType="textUri"/>

    <!-- Hardcoded to SMTP at the moment. May add IMAP support later.
    <TextView
        android:id="@+id/mail_protocol_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_mail_protocol_title"/>

    <EditText
        android:id="@+id/mail_protocol_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
        -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_mail_port_title" />

    <EditText
        android:id="@+id/mail_port_edit_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/mail_port_hint"/>

    <Switch
        android:id="@+id/mail_auth_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_mail_auth_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_mail_sslport_title" />

    <EditText
        android:id="@+id/mail_sslport_edit_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/ssl_port_hint"/>

    <Switch
        android:id="@+id/mail_fallback_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_mail_fallback_title" />

    <Switch
        android:id="@+id/mail_quitwait_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_mail_quitwait_title" />

</LinearLayout>